# pocketcord

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pocketcord/: __init__.py
pocketcord/core/: dispatcher.py  enums.py
